--- a/ZtImage/main.html
+++ b/ZtImage/main.html
@@ -107,7 +107,7 @@
         <!-- right area -->
         <div class="rightArea">
             <div class="edit-box">
-                <textarea></textarea>
+                <textarea class="compoment">ssss</textarea>
             </div>
         </div> <!-- right area -->
     </body>
