--- a/main.html
+++ b/main.html
@@ -13,7 +13,8 @@
         
     </head>
     
-    <body class="dialog">
+    <body scroll="no">
+        <div class="dialog" id="main-dialog">
         <!-- nav area -->
         <div class="topArea">
             <ul class="nav-box def-text" com-type="navBox">
@@ -111,5 +112,6 @@
                 <textarea class="compoment">ssss</textarea>
             </div>
         </div> <!-- right area -->
+        </div>
     </body>
 </html>
