--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
         
     </head>
     
-    <body scroll="no">
+    <body>
         <div class="dialog" id="main-dialog">
         <!-- nav area -->
         <div class="topArea">
