--- a/main.html
+++ b/main.html
@@ -10,6 +10,8 @@
         <link rel="stylesheet" type="text/css" href="stylesheets/ztlist_gz.css" />
         
         <script src="thirdlibs/json2.js"></script>
+        <script src="thirdlibs/jquery-1.11.1.min.js"></script>
+        <script src="thirdlibs/mustache.js"></script>
         <script data-main="main" src="thirdlibs/require.js"></script>
         
     </head>
