zt visual builder

--- a/main.html
+++ b/main.html
@@ -46,7 +46,7 @@
             </ul>
         </div>
             <div class="edit-box" com-type="editBox">
-                <textarea class="compoment">ssss</textarea>
+                <textarea class="compoment" placeholder="Code Edit Panel"></textarea>
             </div>
         </div> <!-- right area -->
         </div>
