--- a/extensions/skubuilder/htmlcontent/skuTemplate.html
+++ b/extensions/skubuilder/htmlcontent/skuTemplate.html
@@ -1,6 +1,6 @@
 
 <!-- sku module template -->
-<link type="text/css" rel="stylesheet" href="skuTemplate.css"/>
+<link type="text/css" rel="stylesheet" href="extensions/skubuilder/htmlcontent/skuTemplate.css"/>
 <div class="sku_dialog">
-        sssssssssss
+        Sku Builder 
 </div>
