--- a/extensions/skubuilder/htmlcontent/skuTemplate.html
+++ b/extensions/skubuilder/htmlcontent/skuTemplate.html
@@ -1,6 +1,6 @@
 
 <!-- sku module template -->
 <link type="text/css" rel="stylesheet" href="extensions/skubuilder/htmlcontent/skuTemplate.css"/>
-<div class="sku_dialog">
-        Sku Builder 
+<div class="ext_dialog shadow">
+        <p class="ext_header">{{UI.Title}}</p>
 </div>
