--- a/main.html
+++ b/main.html
@@ -50,5 +50,6 @@
             </div>
         </div> <!-- right area -->
         </div>
+        <div class='dlg-frame'><div class='dlg-inner'></div></div>
     </body>
 </html>
