--- a/extensions/skubuilder/htmlcontent/skuTemplate.html
+++ b/extensions/skubuilder/htmlcontent/skuTemplate.html
@@ -1,6 +1,9 @@
 
-<!-- sku module template -->
-<link type="text/css" rel="stylesheet" href="extensions/skubuilder/htmlcontent/skuTemplate.css"/>
-<div class="ext_dialog shadow">
+<div>
+    <!-- sku template -->
+<link rel="stylesheet" type="text/css" href="extensions/skubuilder/htmlcontent/skuTemplate.css"/>
+<link rel="stylesheet" type="text/css" href="stylesheets/animate.css" />
+<div class="ext_dialog dialog shadow pulse_ani" id="dialog">
         <p class="ext_header">{{UI.Title}}</p>
+</div>
 </div>
