--- a/extensions/skubuilder/htmlcontent/skuTemplate.html
+++ b/extensions/skubuilder/htmlcontent/skuTemplate.html
@@ -3,7 +3,7 @@
     <!-- sku template -->
 <link rel="stylesheet" type="text/css" href="extensions/skubuilder/htmlcontent/skuTemplate.css"/>
 <link rel="stylesheet" type="text/css" href="stylesheets/animate.css" />
-<div class="ext_dialog dialog shadow pulse_ani" id="dialog">
-        <p class="ext_header">{{UI.Title}}</p>
+<div class="ext_dialog dialog shadow pulse_ani" typeid="dialog" id="dialog">
+        <p class="ext_header" typeid="titlebar">{{UI.Title}}</p>
 </div>
 </div>
