--- a/main.html
+++ b/main.html
@@ -64,10 +64,7 @@
         
         <script src="thirdlibs/json2.js"></script>
         <script src="thirdlibs/jquery-1.11.1.min.js"></script>
-        <script src="thirdlibs/codemirror/lib/codemirror.js"></script>
-        <script src="thirdlibs/codemirror/mode/css/css.js"></script>
-        <script src="thirdlibs/codemirror/addon/hint/show-hint.js"></script>
-        <script src="thirdlibs/codemirror/addon/hint/css-hint.js"></script>
+        <script src="thirdlibs/codemirror/codemirror.cbd.js"></script>
         <script data-main="main" src="thirdlibs/require.js"></script>
   
     </body>
